--- a/personalsite/index.html
+++ b/personalsite/index.html
@@ -170,15 +170,11 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                    <p>I'm a goal-oriented team player. </p>
+                    <p>What's most important to me is that everyone I interact with feels respected. My education and experience have both taught me that kindness goes a long way. I'm hoping to find a team to show my capabilities to.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
-                </div>
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
-                    </a>
+                    <p>I have over 7 years of customer service experience. I've used a few different LiveChat and ticket support services and have experience setting them up. This website has its own customer support center. Feel free to send me a LiveChat and if I'm available I should respond pretty quickly :)</p>
                 </div>
             </div>
         </div>
